# trident

./: CMakeLists.txt  README.md
src/: child_process.c  child_process.h  command.c  command.h  jobs.c  jobs.h  lexer.l  main.c  parser.y  targets.c  targets.h
